# textual-game-of-life

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PUBLISHING.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  ui.py  update_version.py
.github/workflows/: publish.yml  test_on_push.yml
src/textual_game_of_life/: __init__.py  __main__.py  canvas.py  modals.py  tui.py
tests/: __init__.py  conftest.py  test_brush.py  test_canvas.py  test_canvas_extended.py  test_game_logic.py  test_messages.py  test_modals.py  test_patterns.py  test_smoke.py  test_speed.py  test_tui.py
