[project]
name = "textual-game-of-life"
version = "0.3.0"
authors = [
  { name="Thomas Crha", email="thomas@9bitbyte.com" },
]
description = "An implementation of Conway's game of life (cellular automata) in the terminal using textual."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "importlib-metadata==6.8.0",
    "linkify-it-py==2.0.2",
    "markdown-it-py==3.0.0",
    "mdit-py-plugins==0.4.0",
    "mdurl==0.1.2",
    "Pygments==2.16.1",
    "rich==13.5.2",
    "textual==0.35.1",
    "typing_extensions==4.7.1",
    "uc-micro-py==1.0.2",
    "zipp==3.16.2",
]

[project.scripts]
textual-game-of-life = "textual_game_of_life:__main__.main"

[project.urls]
"Homepage" = "https://github.com/thomascrha/textual-game-of-life"
"Bug Tracker" = "https://github.com/thomascrha/textual-game-of-life/issues"

[project.optional-dependencies]
test = [
    "black",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-cov",
]

deploy = [
    "build",
    "twine",
    "setuptools>=61.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
src_paths = ["src"]
lines_between_sections = 0
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
skip_glob = '*/.ipynb_checkpoints/*'

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''
